# industrial-anomaly-detection

./: LICENSE  Makefile  README.md  pyproject.toml
src/: baselines.py  run_pipeline.py  simulate_data.py  validate_data.py
