[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-anomaly-detection"
version = "0.1.0"
description = "Industrial time-series anomaly detection + root-cause on simulated process data (PI-style tags)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "tqdm",
]